# nautilus-setup-background

./: Makefile.am  ProjectHome.md
po/: POTFILES.in
src/: Makefile.am  setup-background.c
tags/0.1/: autogen.sh
trunk/: configure.ac
trunk/po/: ChangeLog  zh_CN.po
trunk/src/: nautilus-setup-background.c  nautilus-setup-background.h
